[tool.poetry]
name = "pv-localization"
version = "0.1.0"
description = ""
authors = ["rafael <123484899+rafaeljcd@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
pytube = "^15.0.0"
ruff = "^0.2.0"
rich = "^13.7.0"
pygit2 = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
